Missing compiled exception handle table entry for multidimensional array allocation

XMLWordPrintable

    • b14
    • Not verified

          
        SHORT SUMMARY:
        Assert failure: missing exception handler in compiled method.
        INDICATORS:
        Internal Error (sharedRuntime.cpp:665), pid=XXXXX, tid=XX guarantee(false)
        failed: missing exception handler
        COUNTER INDICATORS:
        None
        TRIGGERS:
        None known.
        KNOWN WORKAROUND:
        Disable c2 compilation of affected method.
        PRESENT SINCE:
        Unknown.
        HOW TO VERIFY:
        Error message.
        NOTES FOR SE:
        REGRESSION:
        No.
          

              Assignee:
              Vladimir Kozlov
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: