8004741: Missing compiled exception handle table entry for multidimensional array allocation

Added missing exception path for multidimensional array allocation and use Throwable type instead of OutOfMemoryError for allocation's exception.

Reviewed-by: twisti